--- a/manifest.json
+++ b/manifest.json
@@ -4,12 +4,17 @@
   "name": "truLock extension",
   "description": "This extension locks selected urls with face recognition software",
   "version": "1.0",
-
+  "background": {
+    "scripts":["assets/js/background.js"]
+  },
   "browser_action": {
     "default_popup": "index.html"
   },
   "permissions": [
     "activeTab",
-    "tabs"
+    "tabs",
+    "identity",
+    "<all_urls>",
+    "storage"
   ]
 }
